invisible photo, ugly cocktails and arrows have been fixed

--- a/htdocs/t/common.css
+++ b/htdocs/t/common.css
@@ -287,7 +287,11 @@ body{height:100%;}
 .win-shop .win-bg{background-image:none;}
 .win-shop .opacity{height:1500px;}
 
-body .illustration,body .mini-illustration,.b-more-cocktails .point img{scrollbar-base-color:expression((runtimeStyle.scrollbarBaseColor="transparent")&&(offsetWidth?(runtimeStyle.width=offsetWidth+'px'):1)&&(offsetHeight?(runtimeStyle.height=offsetHeight+'px'):1)&&(runtimeStyle.filter=(runtimeStyle.filter?runtimeStyle.filter+';':'')+'progid:DXImageTransform.Microsoft.AlphaImageLoader(src="'+src+'",sizingMethod="image")')&&(src='/t/0.png'));}
+body .illustration,
+body .mini-illustration,
+.b-more-cocktails .point img,
+.cocktail-list .cocktail-preview img
+{scrollbar-base-color:expression((runtimeStyle.scrollbarBaseColor="transparent")&&(offsetWidth?(runtimeStyle.width=offsetWidth+'px'):1)&&(offsetHeight?(runtimeStyle.height=offsetHeight+'px'):1)&&(runtimeStyle.filter=(runtimeStyle.filter?runtimeStyle.filter+';':'')+'progid:DXImageTransform.Microsoft.AlphaImageLoader(src="'+src+'",sizingMethod="image")')&&(src='/t/0.png'));}
 
 .b-more-rec .prev,
 .b-more-cocktails .prev,
